syntax = "proto3";

package crud;

// Specify the Go package path where this code will be generated
option go_package = "/protoc;crud";

service CRUDService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
    string data = 1;
    string token = 2; // Token from AuthService
}

message CreateResponse {
    string message = 1;
}

message ReadRequest {
    string id = 1;
    string token = 2; // Token from AuthService
}

message ReadResponse {
    string data = 1;
}

message UpdateRequest {
    string id = 1;
    string newData = 2;
    string token = 3; // Token from AuthService
}

message UpdateResponse {
    string message = 1;
}

message DeleteRequest {
    string id = 1;
    string token = 2; // Token from AuthService
}

message DeleteResponse {
    string message = 1;
}
